Fixed spacing for contact section

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,7 +1,7 @@
 main {
   padding: 100px 20% 0px 20%;
   display: grid;
-  grid-template-rows: repeat(38, 10vh);
+  grid-template-rows: repeat(39, 10vh);
   padding-bottom: 0;
   position: relative;
 }
@@ -23,10 +23,6 @@ header {
   grid-row: span 8;
 }
 
-#aboutMeLink {
-  /* width: fit-content; */
-}
-
 #projects {
   width: 90%;
   grid-row: span 10;
@@ -35,6 +31,11 @@ header {
 #experience {
   width: 90%;
   grid-row: span 8;
+}
+
+#contact {
+  grid-row: span 3;
+  line-height: 2em;
 }
 
 #email {
